# Rolang

./: Cargo.toml  readme.md
examples/factorial/: .rolang
src/: lexer.rs  lib.rs  main.rs  parser.rs
src/lexer/: lex.rs  lex_char.rs  lex_number.rs  lex_operator.rs  lex_string.rs  lex_symbol.rs
src/parser/: parser.rs
tests/: lex.rs  lex_char.rs
