[package]
name = "rolang"
version = "0.0.0"
edition = "2024"

[dependencies]
unicode-properties = "0.1.3"
imstr = "0.2.0"
bitflags = "2.9.1"
#maplit = "1.0.2"
#inkwell = { version = "0.6.0", features = ["llvm18-1"] }
#melior = { version = "0.24.0" }
#tblgen = { version = "0.6.*" }
#num-bigint = "0.4.6"
